products-business-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-business
  namespace: products-prod
spec:
  type: NodePort
  selector:
    app: products-business
  ports:      
    - port: 8080
      targetPort: 8080      
      nodePort: 30008
