products-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-ui
  namespace: products-prod
spec:
  type: NodePort
  selector:
    app: products-ui
  ports:      
    - port: 8080
      targetPort: 8080      
      nodePort: 30007
